log/build_2024-03-04_10-13-04/my_first_publisher/stdout_stderr.log
running egg_info
writing ../../build/my_first_publisher/my_first_publisher.egg-info/PKG-INFO
writing dependency_links to ../../build/my_first_publisher/my_first_publisher.egg-info/dependency_links.txt
writing entry points to ../../build/my_first_publisher/my_first_publisher.egg-info/entry_points.txt
writing requirements to ../../build/my_first_publisher/my_first_publisher.egg-info/requires.txt
writing top-level names to ../../build/my_first_publisher/my_first_publisher.egg-info/top_level.txt
reading manifest file '../../build/my_first_publisher/my_first_publisher.egg-info/SOURCES.txt'
writing manifest file '../../build/my_first_publisher/my_first_publisher.egg-info/SOURCES.txt'
running build
running build_py
copying my_first_publisher/simple_publisher.py -> /home/vboxuser/turtlebot3_ws/build/my_first_publisher/build/lib/my_first_publisher
running install
running install_lib
copying /home/vboxuser/turtlebot3_ws/build/my_first_publisher/build/lib/my_first_publisher/simple_publisher.py -> /home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher
byte-compiling /home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher/simple_publisher.py to simple_publisher.cpython-38.pyc
  File "/home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher/simple_publisher.py", line 27
    if(!parado):
       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/my_first_publisher/my_first_publisher.egg-info to /home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/python3.8/site-packages/my_first_publisher-0.0.0-py3.8.egg-info
running install_scripts
Installing simple_publisher script to /home/vboxuser/turtlebot3_ws/install/my_first_publisher/lib/my_first_publisher
writing list of installed files to '/home/vboxuser/turtlebot3_ws/build/my_first_publisher/install.log'
